--- a/Brooklyn_Bridge.html
+++ b/Brooklyn_Bridge.html
@@ -16,13 +16,26 @@
 </head>
 
 <body>
-<div class= container>
-    <svg width="800" height="800">
-        <rect />
-        <rect x= "200" y="200" width="400" height="100" style="fill:lightblue;"/>
-        <rect x= "200" y="600" width="400" height="100" style="fill:lightblue;"/>
-      </svg>`
-</div>
+  <svg id= "canvas">
+      <g>
+        <rect id="toBrooklynTextBox" x= "0" y= "0" width= "100" height= 100% fill-opacity= "0"/>
+        <text id="toBrooklynLabel" x= "50" y= "190">To Brooklyn</text>
+      </g>
+      <g>
+          <rect class= "road" id= "upperRoad" x= "100" y="100" width="1000" height="100"/>
+          <rect id= "walkway" x= "100" y="200" width="1000" height="200"/>
+          <rect class= "road" id = "lowerRoad" x= "100" y="400" width="1000" height="100"/>
+          <rect id= "toManhattan" x= "100" y="200" width="1000" height="100"/>
+          <rect id= "toBrooklyn" x= "100" y="300" width="1000" height="100"/>
+      </g>
+      <g>
+          <rect id="toManhattanTextBox" x= "0" y= "0" width= "100" height= 100% fill-opacity= "0"/>
+          <text id="toManhattanLabel" x= "1150" y= "190">To Manhattan</text>
+        </g>
+   
+        <circle cx= 100 cy= 250 r=5 style="fill:yellow;"></circle>
+  </svg>
+
 </body>
 
 </html>
